--- a/refinefirebase/package.json
+++ b/refinefirebase/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.8.3",
     "@pankod/refine-core": "^3.18.0",
+    "@pankod/refine-mui": "^3.30.0",
+    "@pankod/refine-react-hook-form": "^3.27.1",
+    "@pankod/refine-react-router-v6": "^3.18.0",
+    "@pankod/refine-simple-rest": "^3.18.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -11,17 +16,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1",
-    "@pankod/refine-mui": "^3.30.0",
-    "@pankod/refine-react-hook-form": "^3.27.1",
-    "@mui/icons-material": "^5.8.3",
-    "@pankod/refine-react-router-v6": "^3.18.0",
-    "@pankod/refine-simple-rest": "^3.18.0"
+    "refine-firebase": "^1.0.28",
+    "web-vitals": "^1.1.1"
   },
   "devDependencies": {
+    "@types/node": "^12.20.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/node": "^12.20.10",
     "typescript": "^4.7.4"
   },
   "scripts": {
