--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,8 @@
 tasks:
-  - init: npm install
-    command: npm run dev
+  - name: reactstun
+    before: |
+      cd reactstun
+    init: | 
+      echo npm install
+    command: |
+      echo npm run dev
