--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,5 @@
 tasks:
   - name: reactstun
-    before: |
-      cd reactstun
-    init: | 
-      npm install
-    command: |
-      npm run dev
+    before: cd reactstun
+    init: npm install
+    command: npm run dev
