post crud fixed

--- a/refinefirebase/.env
+++ b/refinefirebase/.env
@@ -1,7 +1,9 @@
-REACT_APP_FIREBASE_API_KEY = "YOUR-UNIQUE-CREDENTIALS"
-REACT_APP_FIREBASE_AUTH_DOMAIN = "YOUR-PROJECT-NAME.firebaseapp.com"
-REACT_APP_FIREBASE_DATABASE_URL = "https://YOUR-PROJECT-NAME.firebaseio.com"
-REACT_APP_FIREBASE_PROJECT_ID = "YOUR-PROJECT-FIREBASE-PROJECT-ID"
-REACT_APP_FIREBASE_STORAGE_BUCKET = "YOUR-PROJECT-NAME.appspot.com"
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "YOUR-PROJECT-SENDER-ID"
-REACT_APP_FIREBASE_APP_ID = "YOUR-PROJECT-APP-ID"
+REACT_APP_FIREBASE_API_KEY = "AIzaSyDkFlcwHxx8JZV_NFAL96br5KY0PFO50Fg"
+REACT_APP_FIREBASE_AUTH_DOMAIN = "refinefirebase.firebaseapp.com"
+REACT_APP_FIREBASE_DATABASE_URL = "https://refinefirebase-default-rtdb.europe-west1.firebasedatabase.app"
+REACT_APP_FIREBASE_PROJECT_ID = "refinefirebase"
+REACT_APP_FIREBASE_STORAGE_BUCKET = "refinefirebase.appspot.com"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "21479756163"
+REACT_APP_FIREBASE_APP_ID = "1:21479756163:web:6c655245c8cda2000ea6b6"
+
+
